# NEXARA-PRIME

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NEXARA_DEVELOPMENT_GATES_V1.yaml  NEXARA_PRIME_SOVEREIGN_AGENT_MASTER_BLUEPRINT_V1.md  NEXARA_PROGRAM_CONSTITUTION_V1.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.nexara/: BASELINE.json  CURRENT_GATE.md  DECISION_LOG.md  DIRTY_BASELINE.json  EXECUTION_CHECKPOINT.json  GATE_STATUS.json  KNOWN_BLOCKERS.json  NEXT_ACTION.md  PROGRAM_STATE.json  PROJECT_FACTS.json  PROJECT_STATE.json
docs/: 00-INDEX.md  NEXARA_12_PERSPECTIVE_STRATEGIC_ANALYSIS.md  README.md  WRITER_LEASE_AND_POLICY_GATES.md
extensions/: README.md
governance/: NEXARA_SOVEREIGN_ENGINEERING_CONSTITUTION_V1.md  NEXARA_SOVEREIGN_ENGINEERING_CONSTITUTION_V2.md  NEXARA_SOVEREIGN_ENGINEERING_CONSTITUTION_V2_1.md  authority_index.yaml  nsec.yaml
platform/sdk/python/: pyproject.toml
platform/sdk/python/nexara_sdk/: __init__.py  client.py  models.py
reports/: final_acceptance_report.md
schemas/: event.json  evidence_artifact.json  mission_spec.json  work_contract.json
scripts/: demo.sh  run_dev.sh  run_hardening_acceptance.py  test_all.sh
skills/: README.md
tests/: test_adaptive_runtime.py  test_aos.py  test_aos_adversarial.py  test_aos_e2e.py  test_aos_v12_regression.py  test_aos_v13_regression.py  test_chief_brain_closure_v1.py  test_chief_brain_runtime_convergence.py  test_ci_contract.py  test_cli_agent.py  test_connectors.py  test_core.py  test_delivery_controller.py  test_e2e_runtime_closure.py  test_g2_first_controlled_mission.py  test_g2_kernel_contract.py  test_g3a_capability_registry.py  test_g3b_policy_service.py  test_g3c_telemetry.py  test_g3d_knowledge.py  test_g4_tool_runtime.py  test_g5_memory_knowledge.py  test_g6_governance_hardening.py  test_g9_evolution_pipeline.py  test_hardening.py  test_kernel_enforcement.py  test_nexara_prime_runtime.py  (+27 more)
(+491 files in other folders)
