[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nexara-sdk"
version = "0.1.0"
description = "NEXARA PRIME Python SDK — Runtime Truth API client"
requires-python = ">=3.12"
dependencies = ["httpx2>=0.1", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["nexara_sdk"]
